--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lavender">#B692f7</color>
+    <color name="gray">#505054</color>
+    <color name="green_light">#90EE90</color>
+    <color name="red_light">#FF900000</color>
 </resources>
 
