--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/recCard"
     android:layout_marginStart="12dp"
     android:layout_marginEnd="12dp"
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <!-- Image -->
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -26,41 +27,50 @@
             android:scaleType="centerCrop"
             app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>
 
+        <!-- Titre en gras -->
         <TextView
-            android:layout_width="120dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/recTitle"
             android:text="Title"
             android:textColor="@color/lavender"
             android:textSize="20sp"
-            android:layout_marginTop="20dp"
+            android:textStyle="bold"
             android:layout_marginStart="20dp"
-            android:layout_toEndOf="@id/recImage"/>
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@id/recImage"
+            android:ellipsize="end"
+            android:singleLine="true"/>
 
+        <!-- Auteur -->
         <TextView
-            android:layout_width="80dp"
-            android:layout_height="30dp"
-            android:id="@+id/recPriority"
-            android:text="priority"
-            android:layout_toEndOf="@id/recTitle"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="90dp"
-            android:textAlignment="center"
-            android:textColor="@color/lavender"
-            android:textSize="16sp"/>
-
-        <TextView
-            android:layout_width="140dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/recDesc"
-            android:text="desc"
+            android:text="Author"
             android:textColor="@color/lavender"
             android:textSize="14sp"
-            android:layout_toEndOf="@id/recImage"
             android:layout_below="@id/recTitle"
+            android:layout_toEndOf="@id/recImage"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="4dp"
             android:maxLines="1"
-            android:layout_marginBottom="12dp"/>
+            android:ellipsize="end"/>
+
+        <!-- Genre -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/recLang"
+            android:text="Genre"
+            android:textColor="@color/lavender"
+            android:textSize="12sp"
+            android:layout_below="@id/recDesc"
+            android:layout_toEndOf="@id/recImage"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="2dp"
+            android:ellipsize="end"
+            android:singleLine="true"/>
 
     </RelativeLayout>
 
