--- a/app/src/main/res/layout/bookitem.xml
+++ b/app/src/main/res/layout/bookitem.xml
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:backgroundTint="@color/purple_500"
-            android:text="Options"
+            android:text="View Details"
             android:textColor="@android:color/white"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
