admin detail book and delete book

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="gray">#505054</color>
     <color name="green_light">#90EE90</color>
     <color name="red_light">#FF900000</color>
+    <color name="red">#c70000</color>
 </resources>
 
