--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -146,7 +146,14 @@
         app:menu_icon="@drawable/baseline_format_list_bulleted_24"
         app:menu_openDirection="up"
         app:menu_showShadow="true">
-
+        <com.github.clans.fab.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/editButton"
+            android:src="@drawable/baseline_edit_24"
+            app:fab_showShadow="true"
+            app:fab_colorNormal="@color/green"
+            app:fab_size="mini"/>
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/deleteButton"
             android:layout_width="wrap_content"
