--- a/app/src/main/res/menu/botton_nav_menu.xml
+++ b/app/src/main/res/menu/botton_nav_menu.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Home"
+    <item
+        android:id="@+id/nav_home"
+        android:title="Home"
         android:icon="@drawable/baseline_home_24"
-        android:id="@+id/home"/>
-    <item android:title="History"
+        />
+    <item
+        android:id="@+id/nav_history"
+        android:title="History"
         android:icon="@drawable/baseline_add_24"
-        android:id="@+id/history"/>
-    <item android:title="Profil"
+        />
+    <item
+        android:id="@+id/nav_profile"
+        android:title="Profil"
         android:icon="@drawable/baseline_person_24"
-        android:id="@+id/profil"/>
-    <item android:title="logout"
+        />
+    <item
+        android:id="@+id/nav_logout"
+        android:title="logout"
         android:icon="@drawable/baseline_logout_24"
-        android:id="@+id/logout"/>
+        />
 </menu>
