--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,9 @@
     <color name="buttonTextColor">#FFFFFF</color>
     <color name="red">#c70000</color>
     <color name="green">#00ff00</color>
+    <color name="violet">#AA4693</color>
+    <color name="violet_light">#C79AB9</color>
+
 </resources>
+
 
